2006-07-19  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/EventCmp.py (filter_editor_clicked): Adapt to filter
	editor changes; Stop separately adding birth and death.
	* src/Filters/Makefile.am (pkgdata_PYTHON): Ship new file.

2006-07-18  Alex Roitman  <shura@gramps-project.org>
	* src/ArgHandler.py (ArgHandler.cl_export): Properly expand filename.
	* src/GrampsDb/_WriteGrdb.py (exportData): Use placeholder if
	callback is None.
	* src/GrampsDb/_GrampsBSDDB.py
	(_delete_primary_from_reference_map): defer deleting until the
	cursor is closed.

2006-07-18  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/GraphViz.py: Make it work for Windows

2006-07-18  Don Allingham  <don@gramps-project.org>
	* src/RelLib/_DateBase.py: fix the date comparison for text only 
	dates

2006-07-17  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: typo
	* src/plugins/NarrativeWeb.py: fix name sorting in Windows (bug #236)

2006-07-16  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayTabs/_GalleryTab.py (GalleryTab.build_interface):
	Allow working with pygtk older than 2.8.
	* src/Filters/Rules/Person/_IsChildOfFilterMatch.py
	(IsChildOfFilterMatch.init_list): Convert to child_ref.
	* src/plugins/Checkpoint.py (Checkpoint.run_tool): Add busy cursor.

2006-07-16  Zsolt Foldvari  <zsolt.foldvari@nokia.com>
	* src/ViewManager.py: Custom name format support.
	* src/GrampsCfg.py: Custom name format support.
	* src/RelLib/_Name.py: Custom name format support.
	* src/Editors/_EditName.py: Custom name format support.
	* src/glade/gramps.glade: Custom name format support.
	* src/NameDisplay.py: Custom name format support.

2006-07-15  Don Allingham  <don@gramps-project.org>
	* src/Config/_GrampsConfigKeys.py: remove unused USE_LDS key
	* data/gramps.schemas.in: remove unused USE_LDS key
	* src/StartupDialog.py: remove uused USE_LDS key

2006-07-14  Don Allingham  <don@gramps-project.org>