@@ -1,3 +1,7 @@
+2006-07-19  Zsolt Foldvari  <zsolt.foldvari@nokia.com>
+	* src/GrampsCfg.py: UI improvements.
+	* src/Config/_GrampsIniKeys.py: Proper key retrieval.
+
 2006-07-19  Alex Roitman  <shura@gramps-project.org>
 	* src/plugins/EventCmp.py (filter_editor_clicked): Adapt to filter
 	editor changes; Stop separately adding birth and death.
